# Pico-Linear-Hall-Effect-Sensor

./: CMakeLists.txt  README.md  lhe.c  lhe.h
example/: CMakeLists.txt  example.c
